fix: gradient-background overflow

--- a/src/index.css
+++ b/src/index.css
@@ -120,7 +120,7 @@ body {
 }
 
 #gradient {
-  @apply w-full h-full absolute top-0 left-0;
+  @apply w-full h-full absolute top-0 left-0 z-[-1];
   &::after {
     @apply w-full h-full absolute top-0 left-0;
     content: '';
